kubernetes/apps/home-automation/ironcorgi/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: ironcorgi-backend
  labels:
    app: ironcorgi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ironcorgi-backend
  template:
    metadata:
      labels:
        app: ironcorgi-backend
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "true"
        instrumentation.opentelemetry.io/container-names: "ironcorgi-backend"
    spec:
      containers:
      - name: ironcorgi-backend
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10050
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10050
        volumeMounts:
        - mountPath: /data
          subPath: ironcorgi-symlink
          name: data
        image: ghcr.io/bokker/ironcorgi-backend:1.0.5 # {"$imagepolicy": "home-automation:ironcorgi-backend"}
        imagePullPolicy: Always
        ports:
        - containerPort: 10050
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: unraid-rust-pvc
