kubernetes/apps/home-automation/ironcorgi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: ironcorgi
  labels:
    app: ironcorgi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ironcorgi
  template:
    metadata:
      labels:
        app: ironcorgi
    spec:
      containers:
      - name: ironcorgi
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10050
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10050
        volumeMounts:
          - mountPath: /data
            subPath: ironcorgi-symlink
            name: data
        image: ghcr.io/bokker/ironcorgi:master
        imagePullPolicy: Always
        ports:
          - containerPort: 10050
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: unraid-rust-pvc
