kubernetes/apps/home-automation/ironcorgi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ironcorgi
  namespace: home-automation
  labels:
    app: ironcorgi
spec:
  selector:
    app: ironcorgi
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 10050
      targetPort: 10050
