kubernetes/apps/home-automation/ironcorgi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: ironcorgi-internal
spec:
  ingressClassName: internal
  rules:
  - host: ironcorgi.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ironcorgi
            port:
              number: 10050
